# parsical

./: .gitignore  CMakeLists.txt  LICENSE  README.md  uninstall.sh
src/: Findparsical.cmake  parsical.hpp
src/parsical/: general.hpp  general.tpp  parseerror.cpp  parseerror.hpp  parsestream.cpp  parsestream.hpp  string.cpp  string.hpp
src/test/: main.cpp  setup.cpp
